# oc

./: .gitignore  Cargo.toml  assets  examples.sh  justfile
.zed/: settings.json
assets/ui/: ui.xcf
crates/bevy_heightmap/: Cargo.toml
crates/oc_battle_gui/: Cargo.toml
crates/oc_battle_gui/src/: config.rs  debug.rs  error.rs  individual.rs  lib.rs  logging.rs  main.rs  projectile.rs  run.rs  setup.rs  states.rs  utils.rs
crates/oc_battle_gui/src/downloading/: mod.rs
crates/oc_battle_gui/src/entity/: geo.rs  individual.rs  mod.rs  physics.rs  projectile.rs  world.rs
crates/oc_battle_gui/src/entity/world/: minimap.rs  mod.rs  region.rs
crates/oc_battle_gui/src/fx/: mod.rs
crates/oc_battle_gui/src/home/: init.rs  mod.rs
crates/oc_battle_gui/src/ingame/: behavior.rs  camera.rs  draw.rs  height.rs  individual.rs  init.rs  input.rs  lov.rs  mod.rs  physics.rs  projectile.rs  region.rs  squad.rs  state.rs  world.rs
crates/oc_battle_gui/src/ingame/camera/: map.rs  mod.rs  move_.rs  region.rs
crates/oc_battle_gui/src/ingame/camera/debug/: individual.rs  mod.rs  tile.rs  world.rs
crates/oc_battle_gui/src/ingame/debug/: projectile.rs
crates/oc_battle_gui/src/ingame/draw/: mod.rs  world.rs
crates/oc_battle_gui/src/ingame/input/: client.rs  individual.rs  keyboard.rs  left_click.rs  map.rs  mod.rs  projectile.rs
crates/oc_battle_gui/src/ingame/region/: debug.rs  mod.rs
crates/oc_battle_gui/src/ingame/squad/: debug.rs  mod.rs  update.rs
crates/oc_battle_gui/src/loading/: mod.rs
crates/oc_battle_gui/src/network/: connect.rs  input.rs  mod.rs  output.rs  state.rs
crates/oc_battle_gui/src/sprites/: mod.rs  soldier.rs
crates/oc_battle_gui/src/tests/: mod.rs
crates/oc_battle_gui/src/tileset/: height.rs  mod.rs  terrain.rs
crates/oc_battle_gui/src/window/: mod.rs
crates/oc_battle_gui/src/window/debug/: battle.rs  mod.rs  physics.rs  subject.rs
crates/oc_battle_gui/src/window/debug/battle/: component.rs  cursor.rs  left_click.rs  mod.rs  refresh.rs  window.rs
crates/oc_battle_gui/src/window/menu/battle/: mod.rs
crates/oc_battle_gui/src/world/: individual.rs  mod.rs  tile.rs
crates/oc_examples/: Cargo.toml
crates/oc_examples/src/: bridge.rs  lib.rs  logging.rs  run.rs
crates/oc_examples/src/snapshot/: individual.rs  mod.rs  projectile.rs  squad.rs  tile.rs
crates/oc_examples/src/tests/: behavior.rs  mod.rs  wall.rs
crates/oc_geo/: Cargo.toml
crates/oc_geo/src/: lib.rs  region.rs  tile.rs
crates/oc_individual/: Cargo.toml
crates/oc_individual/src/: behavior.rs  lib.rs  network.rs  order.rs  squad.rs
crates/oc_lov/: Cargo.toml
crates/oc_lov/src/: lib.rs
crates/oc_mod/: Cargo.toml
crates/oc_mod/src/: ammunition.rs  armament.rs  lib.rs  nature.rs  projectiles.rs  sound.rs  terrain.rs  weapons.rs
crates/oc_network/: Cargo.toml
crates/oc_network/src/: lib.rs
crates/oc_physics/: Cargo.toml
crates/oc_physics/src/: collision.rs  fx.rs  lib.rs  line.rs  reactive.rs  update.rs  volume.rs
crates/oc_physics/src/update/: bevy.rs  mod.rs
crates/oc_projectile/: Cargo.toml
crates/oc_projectile/src/: bullet.rs  lib.rs  network.rs  physics.rs  spawn.rs
crates/oc_root/: Cargo.toml
crates/oc_root/src/: config.rs  end.rs  files.rs  identity.rs  ids.rs  lib.rs  material.rs  opacity.rs  physics.rs  side.rs  static_.rs  tile.rs  utils.rs  y.rs
crates/oc_utils/: Cargo.toml
crates/oc_utils/src/: bevy.rs  collections.rs  d2.rs  debug.rs  error.rs  image.rs  lib.rs  number.rs  tileset.rs
crates/oc_utils/src/debug/: lock.rs
crates/oc_world/: Cargo.toml
crates/oc_world/src/: cache.rs  control.rs  decor.rs  flag.rs  height.rs  lib.rs  load.rs  load.rs.bak  map.rs  meta.rs  navmesh.rs  physics.rs  reader.rs  resume.rs  snapshot.rs  spawn.rs  squad.rs  terrain.rs  tile.rs  update.rs
crates/oc_world_generator/: Cargo.toml
crates/oc_world_generator/src/: main.rs
crates/oc_world_server/: Cargo.toml
crates/oc_world_server/src/: bridge.rs  config.rs  index.rs  individual.rs  lib.rs  main.rs  network.rs  perf.rs  physics.rs  routing.rs  run.rs  runner.rs  schedule.rs  state.rs  tracker.rs
crates/oc_world_server/src/individual/: effect.rs  mod.rs  move_.rs  physics.rs  update.rs
crates/oc_world_server/src/physics/: mod.rs
crates/oc_world_server/src/physics/collision/: gunshot.rs  mod.rs
crates/oc_world_server/src/projectile/: mod.rs  physics.rs  update.rs
crates/oc_world_server/src/runner/: input.rs  mod.rs  update.rs
crates/oc_world_server/src/state/: mod.rs
crates/oc_world_server/src/static_/: minimap.rs  mod.rs  mod_.rs  world.rs
crates/oc_world_server/src/utils/: context.rs  lock.rs  mod.rs  subject.rs
crates/tests/: Cargo.toml
crates/tests/src/: lib.rs  physics.rs
examples/: minidblue.snapshot  wall.snapshot
examples/height/: background.xcf  meta.toml  world.tmx
examples/meadow1/: background.xcf  world.tmx
examples/minidblue/: terrain.tsx  world.tmx
examples/wall/: world.tmx
examples/world1/: meta.toml  terrain.tsx
mods/std1/: amunitions.ron  mod.ron  natures.ron  projectiles.ron  weapons.ron
mods/tests1/: amunitions.ron  mod.ron  sprites  weapons.ron
templates/world/: height.tsx  world.tmx
