[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.dependencies]
bevy = "0.18"
derive_more = "2.1"
thiserror = "2.0"
anyhow = "1.0"
rayon = "1.11"
rustc-hash = "2.1"
rkyv = "0.8"
num_cpus = "1.17"
message-io = "0.19"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.5", features = ["derive"] }
bresenham = "0.1.1"

# tests
rstest = "0.26"
