[package]
name = "oc_battle_gui"
version = "0.1.0"
edition = "2024"

# [profile.dev]
# opt-level = 1

# [profile.dev.package."*"]
# opt-level = 3

# [profile.release]
# codegen-units = 1
# lto = "thin"

# [profile.wasm-release]
# inherits = "release"
# opt-level = "s"
# strip = "debuginfo"

[dependencies]
oc_network = { path = "../oc_network" }
oc_utils = { path = "../oc_utils" }
oc_geo = { path = "../oc_geo" }
oc_individual = { path = "../oc_individual" }
bevy.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
message-io.workspace = true
rkyv.workspace = true
rustc-hash.workspace = true
