[package]
name = "oc_battle_gui"
version = "0.1.0"
edition = "2024"

[features]
debug = ["bevy/bevy_dev_tools", "oc_network/debug"]

# [profile.dev]
# opt-level = 1

# [profile.dev.package."*"]
# opt-level = 3

# [profile.release]
# codegen-units = 1
# lto = "thin"

# [profile.wasm-release]
# inherits = "release"
# opt-level = "s"
# strip = "debuginfo"

[dependencies]
oc_root = { path = "../oc_root" }
oc_network = { path = "../oc_network" }
oc_utils = { path = "../oc_utils", features = ["bevy"] }
oc_geo = { path = "../oc_geo" }
oc_world = { path = "../oc_world" }
oc_physics = { path = "../oc_physics", features = ["bevy"] }
oc_individual = { path = "../oc_individual" }
oc_projectile = { path = "../oc_projectile" }
bevy.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
message-io.workspace = true
rkyv.workspace = true
rustc-hash.workspace = true
reqwest = { workspace = true, features = ["blocking"] }
bevy_egui.workspace = true
egui_dock.workspace = true
strum.workspace = true
strum_macros.workspace = true
derive_more = { workspace = true, features = ["constructor"] }
