[package]
name = "oc_battle_gui"
version = "0.1.0"
edition = "2024"

[features]
debug = ["bevy/bevy_dev_tools", "oc_network/debug"]
test = []

[dependencies]
oc_root = { path = "../oc_root", features = ["bevy"] }
oc_network = { path = "../oc_network" }
oc_utils = { path = "../oc_utils", features = ["bevy"] }
oc_mod = { path = "../oc_mod" }
oc_geo = { path = "../oc_geo" }
oc_world = { path = "../oc_world", features = ["bevy"] }
oc_physics = { path = "../oc_physics", features = ["bevy"] }
oc_lov = { path = "../oc_lov" }
oc_individual = { path = "../oc_individual", features = ["bevy"] }
oc_projectile = { path = "../oc_projectile" }
bevy_heightmap = { path = "../bevy_heightmap" }
bevy.workspace = true
bevy_spritesheet_animation.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
message-io.workspace = true
rkyv.workspace = true
rustc-hash.workspace = true
reqwest = { workspace = true, features = ["blocking"] }
bevy_egui.workspace = true
egui_dock.workspace = true
strum.workspace = true
strum_macros.workspace = true
derive_more = { workspace = true, features = ["constructor"] }
flate2.workspace = true
tar.workspace = true
bon.workspace = true
fs_extra.workspace = true
tempfile.workspace = true
image.workspace = true
glam.workspace = true
serde.workspace = true
serde_json.workspace = true
