[package]
name = "oc_examples"
version = "0.1.0"
edition = "2024"

[features]
debug = []

[dependencies]
oc_root = { path = "../oc_root" }
oc_world_server = { path = "../oc_world_server" }
oc_world = { path = "../oc_world" }
oc_network = { path = "../oc_network" }
oc_battle_gui = { path = "../oc_battle_gui" }
tracing.workspace = true
tracing-subscriber.workspace = true
bon.workspace = true
