[package]
name = "oc_examples"
version = "0.1.0"
edition = "2024"

[features]
debug = ["oc_network/debug", "oc_world_server/debug"]
debug_locks = ["oc_utils/debug"]
test = ["debug", "oc_world_server/tracker"]

[dependencies]
oc_root = { path = "../oc_root" }
oc_world_server = { path = "../oc_world_server" }
oc_world = { path = "../oc_world" }
oc_network = { path = "../oc_network" }
oc_individual = { path = "../oc_individual" }
oc_projectile = { path = "../oc_projectile" }
oc_physics = { path = "../oc_physics" }
oc_geo = { path = "../oc_geo" }
oc_utils = { path = "../oc_utils" }
oc_mod = { path = "../oc_mod" }
oc_battle_gui = { path = "../oc_battle_gui" }
tracing.workspace = true
tracing-subscriber.workspace = true
bon.workspace = true
tempfile.workspace = true
thiserror.workspace = true
anyhow.workspace = true
derive_more.workspace = true
bevy.workspace = true
serde.workspace = true
serde_json.workspace = true
clap.workspace = true
parking_lot.workspace = true
