[package]
name = "oc_individual"
version = "0.1.0"
edition = "2024"

[features]
bevy = ["dep:bevy"]

[dependencies]
oc_root = { path = "../oc_root" }
oc_utils = { path = "../oc_utils" }
oc_mod = { path = "../oc_mod" }
oc_geo = { path = "../oc_geo" }
oc_physics = { path = "../oc_physics" }
derive_more = { workspace = true, features = ["constructor"] }
rkyv.workspace = true
serde.workspace = true
serde_json.workspace = true
glam.workspace = true
bevy = { workspace = true, optional = true }
