[package]
name = "oc_mod"
version = "0.1.0"
edition = "2024"

[features]

[dependencies]
oc_root = { path = "../oc_root" }
oc_utils = { path = "../oc_utils" }
ron.workspace = true
serde.workspace = true
serde_derive.workspace = true
thiserror.workspace = true
tar.workspace = true
flate2.workspace = true
tracing.workspace = true
anyhow.workspace = true
rkyv.workspace = true
strum.workspace = true
strum_macros.workspace = true
