[package]
name = "oc_physics"
version = "0.1.0"
edition = "2024"

[features]
bevy = ["dep:bevy"]
default = []

[dependencies]
oc_utils = { path = "../oc_utils", features = ["bevy"] }
oc_root = { path = "../oc_root" }
oc_geo = { path = "../oc_geo" }
oc_mod = { path = "../oc_mod" }
derive_more = { workspace = true, features = ["constructor"] }
rkyv.workspace = true
line_drawing.workspace = true
tracing.workspace = true
bevy = { workspace = true, optional = true }
serde.workspace = true
serde_json.workspace = true
tracing-subscriber.workspace = true
