[package]
name = "oc_projectile"
version = "0.1.0"
edition = "2024"

[features]

[dependencies]
oc_root = { path = "../oc_root" }
oc_utils = { path = "../oc_utils" }
oc_geo = { path = "../oc_geo" }
oc_physics = { path = "../oc_physics" }
derive_more = { workspace = true, features = ["constructor", "deref"] }
rkyv.workspace = true
