[package]
name = "oc_root"
version = "0.1.0"
edition = "2024"

[features]
bevy = ["dep:bevy"]

[dependencies]
rkyv = { workspace = true, features = ["uuid-1"] }
derive_more = { workspace = true, features = ["constructor", "deref"] }
serde = "1.0"
serde_derive = "1.0"
glam.workspace = true
bevy = { workspace = true, optional = true }
uuid.workspace = true
