[package]
name = "oc_utils"
version = "0.1.0"
edition = "2024"

[features]
bevy = ["dep:bevy"]
tiled = ["dep:tiled"]
debug = ["dep:backtrace"]

[dependencies]
image.workspace = true                                         # should be optional because used only by binoc_root = { path = "../oc_root" }
rkyv.workspace = true
tracing.workspace = true
bevy = { workspace = true, optional = true }
rustc-hash.workspace = true
derive_more = { workspace = true, features = ["constructor"] }
glam.workspace = true
serde.workspace = true
serde_derive.workspace = true
geo.workspace = true
tiled = { workspace = true, optional = true }
anyhow.workspace = true
backtrace = { workspace = true, optional = true }
uuid.workspace = true
