[package]
name = "oc_world"
version = "0.1.0"
edition = "2024"

[features]

[dependencies]
oc_root = { path = "../oc_root" }
oc_utils = { path = "../oc_utils" }
oc_geo = { path = "../oc_geo" }
oc_individual = { path = "../oc_individual" }
oc_physics = { path = "../oc_physics" }

derive_more = { workspace = true, features = ["constructor"] }
rkyv.workspace = true
thiserror.workspace = true
image.workspace = true
uuid.workspace = true

[dev-dependencies]
rstest.workspace = true
